--- a/package.json
+++ b/package.json
@@ -8,8 +8,28 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "popper.js": "^1.16.1",
+    "qs": "^6.9.2",
+    "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
+    "vue-axios-cors": "^1.0.1",
+    "vue-inputmask": "^0.2.1",
+    "vue-router": "^3.1.6",
+    "vue-select": "^3.9.0",
+    "vue-signature": "^2.4.3",
+    "vue-signature-pad": "^2.0.0",
+    "vue-slick": "^1.1.15",
+    "vue-slick-carousel": "^1.0.5",
+    "vue-the-mask": "^0.11.1",
+    "vue-toasted": "^1.1.28",
+    "vue2-datepicker": "^3.4.1",
+    "vuejs-datepicker": "^1.6.2",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
@@ -18,6 +38,11 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "vselect-component": "^1.0.2",
+    "vue-simple-select": "^1.0.1",
+    "vue-simplest-select": "^1.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -37,5 +62,10 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "proxy": {
+    "*": {
+      "target": "http://testvue"
+    }
+  }
 }
